--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="resume.html">Resume</a></li>
             </ul>
         </div>
     </nav>
@@ -205,7 +206,7 @@
                         <div class="contact-details">
                             <h3>Phone</h3>
                             <p>+63 946 710 5070</p>
-                            <small>Please message first before calling</small>
+                            <small>Please message first before calling thank you.</small>
                         </div>
                     </a>
                 </div>
