updates-add-publication

--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
                             <small>Please message first before calling thank you.</small>
                         </div>
                     </a>
+                    <a href="https://github.com/dioame" target="_blank" rel="noopener noreferrer" class="contact-item">
+                        <div class="contact-icon"><i class="fab fa-github"></i></div>
+                        <div class="contact-details">
+                            <h3>GitHub</h3>
+                            <p>github.com/dioame</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
