--- a/resume.html
+++ b/resume.html
@@ -250,7 +250,7 @@
 <body>
     <!-- Resume Header -->
     <header class="resume-header">
-        <h1>Dioame Jade</h1>
+        <h1>Dioame Jade C. Rendon</h1>
         <p class="title">Full Stack Developer</p>
         <div class="contact-info">
             <a href="mailto:dioamejade@gmail.com">
@@ -260,6 +260,10 @@
             <a href="tel:+639467105070">
                 <span>Phone:</span>
                 <span>+63 946 710 5070</span>
+            </a>
+            <a href="https://github.com/dioame" target="_blank" rel="noopener noreferrer">
+                <span>GitHub:</span>
+                <span>github.com/dioame</span>
             </a>
             <span>Location: Philippines</span>
         </div>
@@ -358,6 +362,42 @@
             </div>
             <div class="experience-description">
                 6+ years of professional development experience building scalable web and mobile applications with a focus on API-based backend systems and modern frontend frameworks.
+            </div>
+        </div>
+    </section>
+
+    <!-- Education -->
+    <section class="resume-section">
+        <h2>Education</h2>
+        <div class="experience-item">
+            <div class="experience-header">
+                <div class="experience-title">Master of Science in Information Technology</div>
+                <div class="experience-period">Ongoing (18 units completed)</div>
+            </div>
+            <div class="experience-description">
+                Caraga State University
+            </div>
+        </div>
+        <div class="experience-item">
+            <div class="experience-header">
+                <div class="experience-title">Bachelor of Science in Information Technology</div>
+                <div class="experience-period">Completed</div>
+            </div>
+            <div class="experience-description">
+                Caraga State University
+            </div>
+        </div>
+    </section>
+
+    <!-- Publications -->
+    <section class="resume-section">
+        <h2>Publications</h2>
+        <div class="experience-item">
+            <div class="experience-header">
+                <div class="experience-title">IEEE Publication</div>
+            </div>
+            <div class="experience-description">
+                <a href="https://ieeexplore.ieee.org/document/10459522" target="_blank" rel="noopener noreferrer" style="color: var(--primary-color); text-decoration: none;">IEEE Xplore Document</a>
             </div>
         </div>
     </section>
