--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@
                     <h3>AI-Assisted Coding</h3>
                     <p>Leveraging AI tools to enhance development workflow and productivity</p>
                 </div>
+                <div class="experience-card">
+                    <div class="experience-icon"><i class="fas fa-plug"></i></div>
+                    <h3>Socket Integration</h3>
+                    <p>Implementing real-time communication using WebSocket technology for live updates and interactive features</p>
+                </div>
+                <div class="experience-card">
+                    <div class="experience-icon"><i class="fas fa-broadcast-tower"></i></div>
+                    <h3>Laravel Reverb</h3>
+                    <p>Building real-time applications with Laravel Reverb for WebSocket server functionality and event broadcasting</p>
+                </div>
+                <div class="experience-card">
+                    <div class="experience-icon"><i class="fas fa-key"></i></div>
+                    <h3>Laravel Passport</h3>
+                    <p>Implementing OAuth2 authentication and API token management using Laravel Passport for secure API access</p>
+                </div>
             </div>
         </div>
     </section>
@@ -214,6 +229,27 @@
                         <div class="contact-details">
                             <h3>GitHub</h3>
                             <p>github.com/dioame</p>
+                        </div>
+                    </a>
+                    <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" rel="noopener noreferrer" class="contact-item">
+                        <div class="contact-icon"><i class="fab fa-linkedin"></i></div>
+                        <div class="contact-details">
+                            <h3>LinkedIn</h3>
+                            <p>Connect on LinkedIn</p>
+                        </div>
+                    </a>
+                    <a href="https://web.facebook.com/dioame.rendon/" target="_blank" rel="noopener noreferrer" class="contact-item">
+                        <div class="contact-icon"><i class="fab fa-facebook"></i></div>
+                        <div class="contact-details">
+                            <h3>Facebook</h3>
+                            <p>dioame.rendon</p>
+                        </div>
+                    </a>
+                    <a href="https://drive.google.com/drive/folders/1nW61KFftWrLMhBa1STuQq3eXwMNMYaGZ" target="_blank" rel="noopener noreferrer" class="contact-item">
+                        <div class="contact-icon"><i class="fas fa-certificate"></i></div>
+                        <div class="contact-details">
+                            <h3>Certificates</h3>
+                            <p>View my certificates</p>
                         </div>
                     </a>
                 </div>
